--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Stance Studios</title>
+    <title>PETERS GODSPOWER E B</title>
     <!--google font starts here-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -33,11 +33,11 @@
 <div class="menu">
   <li><a href="index.html">Home</a></li>
   <li><a href="#about">About</a></li>
-  <li><a href="#Work">Works</a></li>
+  <li><a href="#Works">Works</a></li>
   <li><a href="#Services">Services</a></li>
 
 
-    <a class="book_me" href="copy your whatsapp link and paste it here">BOOK ME</a>
+    <a class="book_me" href="https://api.whatsapp.com/send/?phone=233559365299&text&type=phone_number&app_absent=0">BOOK ME</a>
   </div>
 
   <!--humburger (menu bnt) btn starts-->
@@ -56,8 +56,7 @@
   <!--banner starts-->
   <div class="banner">
     <div id="about" class="about">
-      <p>Video provides a powerful way to help you prove your point. When you click Online Video, you can paste in the embed code for the video you want to add. You can also type a keyword to search online for the video that best fits your document. To make your document look professionally produced, Word provides header, footer, cover page, and text box designs that complement each other. For example, you can add a matching cover page, header, and sidebar.
-        
+      <p> Peters GodsPower E B is a skilled graphic and web designer celebrated for his creative flair and attention to detail. He excels at blending aesthetics with functionality, ensuring that his designs are both visually stunning and user-friendly. With a strong grasp of various design tools and technologies, Peters crafts unique brand identities and engaging websites tailored to meet client needs. Committed to staying ahead of design trends, he continually pushes the boundaries of creativity in his work.
         </p>
 
         <!--cv button here-->
@@ -78,14 +77,13 @@
 
   <div class="about_section">
     <h2>ABOUT ME</h2>
-    <p>Video provides a powerful way to help you prove your point. When you click Online Video, you can paste in the embed code for the video you want to add. You can also type a keyword to search online for the video that best fits your document. To make your document look professionally produced, Word provides header, footer, cover page, and text box designs that complement each other. For example, you can add a matching cover page, header, and sidebar.</p>
-  </div>
+   <p>Peters GodsPower E B is a prominent graphic and web designer and the founder of MSA Group of Companies. With a passion for design and innovation, he has built a reputation for delivering exceptional visual solutions that elevate brands. Under his leadership, MSA Group of Companies has become known for its creative power and commitment to quality. Peters combines his expertise in design with a strategic vision, helping clients achieve their goals through effective branding and engaging web experiences. His dedication to excellence and continuous learning keeps him at the forefront of the industry</p>  </div>
 
    <!-- about section ends -->
 
    <!--works section starts-->
 
-   <div id="works" class="works_section">
+   <div id="Works" class="works_section">
     <h2>OUR RECENT WORKS</h2>
     <h4>New Stunning Project For Our Amazing Clients</h4>
    </div>
@@ -93,20 +91,20 @@
    <h4 style="text-align: center; color: darkblue;">LOGOS</h4>
 
    <div class="works_box">
-    <img src="logp-cc2.jpg" width="25%">
-    <img src="REAL-LOGO.jpg33344.jpg" width="25">
-    <img src="logo2.jpg"  width="25%">
-    <img src="Untitled-1.jpg"  width="25%" >
+    <img src="logp-cc2.jpg">
+    <img src="REAL-LOGO.jpg33344.jpg">
+    <img src="logo2.jpg">
+    <img src="Untitled-1.jpg">
   </div>
 
 <!--flyer starts-->
   <h4 style="text-align: center; color: darkblue;">FLYERS</h4>
 
   <div class="works_box">
-    <img src="CCCCCCCCCCCCCCCCCCCCCCCC.jpg" width="25%">
-    <img src="EEE ON3VY61.jpg" width="25%">
-    <img src="Free-Building-Mounted-Signboard-Logo-Mockup-PSD.jpg" width="25%">
-    <img src="bill.jpg" width="25%">
+    <img src="CCCCCCCCCCCCCCCCCCCCCCCC.jpg">
+    <img src="EEE ON3VY61.jpg">
+    <img src="Free-Building-Mounted-Signboard-Logo-Mockup-PSD.jpg">
+    <img src="billboard.jpg" width="25%">
   </div>
   <!--flyer starts-->
 
@@ -115,7 +113,7 @@
     
   <!-- services section starts -->
 
-  <div id="servies" class="services_section">
+  <div id="Services" class="services_section">
     <h2>OUR SERVICES</h2>
     <p>We offer wide range of tech servies</p>
 
@@ -127,7 +125,7 @@
 
       <div class="cnt">
         <img src="photographer.png" height="150px">
-        <h4>Photography</h4>
+        <h4> Vedio and Photography</h4>
       </div>
 
       <div class="cnt">
@@ -136,12 +134,20 @@
       </div>
 
     </div>
+    <div class="contact">
+      <p>Call <br> +233559365299<br>Email <br> petersgodspower4@gmail.com </p>
+  
+    </div>
+    <div class="space">
+      <p>.</p>
+    </div>
 
      <!--banner ends-->
   <div class="footer">
-    <p>&copy; 2024 ALL RIGHT Reserved.<br> powered by <span style="color: red;">MSA GROUP OF COMPANIES</span> </p>
+    <p>&copy; 2024 ALL RIGHT Reserved.<br> powered by <span style="color: red;">MSA GROUP OF COMPANIES</span> @PETERS GODSPOWER E B</p>
   </div>
 
+ 
 
   </div>
 
